# searchnews-project

./: README.md  main.py  pyproject.toml  scrap_database.db  test_file.py
src/: crawling.py  database.py  gui.py  gui_examples.py  gui_examples_layouts.py  gui_examples_menus.py  gui_examples_start.py  gui_examples_widgets.py  update_style  voice_recog.py
